# handler/endpoints.go
@@ -16,3 +16,8 @@ func (s *Server) Hello(ctx echo.Context, params generated.HelloParams) error {
 	resp.Message = fmt.Sprintf("Hello User %d", params.Id)
 	return ctx.JSON(http.StatusOK, resp)
 }
+
+func (s *Server) Registration(ctx echo.Context) error {
+
+	return nil
+}
